# menu-star

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: basic_draw.h  main.cpp  math_shape.h  menu.h
